# C-Memory-Allocator

./: .gitignore  CMakeLists.txt  README.md  build-cmake.bat  build.bat
notes/: potential-enhancements.md  potential-optimizations.md
src/: Allocation.h  Colours.h  Deallocation.h  Defragmentation.h  Main.h  Print.h  Tests.h  main.c  main.cpp
