# cmake_minimum_required(VERSION 3.10)
# project(c-memory-allocator C)

# set(CMAKE_C_STANDARD 17)

# # Define the executable
# add_executable(main src/main.c)
# set_target_properties(main PROPERTIES LINKER_LANGUAGE C)


# target_include_directories(main PRIVATE)

# # Link against Windows shlwapi library
# if(WIN32)
#     target_link_libraries(main PRIVATE)
# endif()
